--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,7 @@
 NODE_ENV=development
 
 PORT=4000
-DB_URL=mongodb://localhost:27017
+DB_URL=mongodb://mongo_user:mongo_pass@localhost:27017
 DB_NAME=diplomado
 
 JWT_SECRET=my-ultra-secure-and-ultra-long-secret
